--- a/src/components/MuestraImagenes/MuestraImagenes.css
+++ b/src/components/MuestraImagenes/MuestraImagenes.css
@@ -1,10 +1,3 @@
-.resultados {
-    display: flex;
-    width: 100%;
-    gap: 1.5%;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
 /*
 .my-masonry-grid {
     display: flex;
@@ -17,13 +10,19 @@
     background-clip: padding-box;
 }
 */
-
 .card {
     width: 23%;
     margin-bottom: 30px;
     box-shadow: var(--sombra);
     transition: .3s;
     background: var(--blanco);
+}
+
+/*temporal hasta saber si anda el masonry*/
+.card>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .card:hover {
