--- a/src/components/MuestraImagenes/MuestraImagenes.css
+++ b/src/components/MuestraImagenes/MuestraImagenes.css
@@ -1,4 +1,4 @@
-/*
+
 .my-masonry-grid {
     display: flex;
     margin-left: -30px;
@@ -9,21 +9,26 @@
     padding-left: 30px;
     background-clip: padding-box;
 }
-*/
+
 .card {
-    width: 23%;
     margin-bottom: 30px;
     box-shadow: var(--sombra);
     transition: .3s;
     background: var(--blanco);
 }
 
-/*temporal hasta saber si anda el masonry*/
 .card>img {
     width: 100%;
-    height: 100%;
+}
+
+/*temporal hasta saber si anda el masonry*/
+/*
+.card>img {
+    width: 100%;
+    height: 200px;
     object-fit: cover;
 }
+*/
 
 .card:hover {
     transform: scale(1.05);
@@ -39,7 +44,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1em;
+    gap: .5em;
+}
+
+.creditos {
+    color: black;
+}
+
+.creditos:hover {
+    color: black;
 }
 
 .propiedades {
